Add example sources and deliverable files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 deliverables/
 sources/
 temp/
+
+# Allow deliverables and sources within examples directory
+!examples/**/deliverables/
+!examples/**/sources/
