--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ deliverables/
 sources/
 temp/
 
+# Claude local settings
+.claude/settings.local.json
+
 # Allow deliverables and sources within examples directory
 !examples/**/deliverables/
 !examples/**/sources/
