Add support for pulling sources from other repo

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ temp/
 # Allow deliverables and sources within examples directory
 !examples/**/deliverables/
 !examples/**/sources/
+
+.gitmodules
+.sources-repo/
